--- a/scss/_section-projects.scss
+++ b/scss/_section-projects.scss
@@ -16,12 +16,13 @@
 }
 .projects--overview
 {
+  margin: 50px 0;
   // position: relative;
   // height: 538px;
 }
 .project
 {
-  margin: 50px 0;
+  margin-bottom: 40px;
   // width: 348px;
   // display: block;
   // position: absolute;
@@ -32,15 +33,27 @@
   //
   .project--image
   {
-    height: 300px;
-    width: 50%;
+    width: 100%;
+    height: 200px;
     margin-bottom: 10px;
+    box-shadow: 0 9px 15px #888888;
+    @include border-radius (10px);
+
+    @media screen and (min-width: 768px)
+    {
+      width: 50%;
+      height: 300px;
+    }
   }
   .project--info
   {
     display: inline-block;
-    float: right;
-    width: 45%;
+
+    @media screen and (min-width: 768px)
+    {
+      width: 45%;
+      float: right;
+    }
   }
   .project--title
   {
@@ -78,7 +91,7 @@
     color: $white;
     font-size: 0.9rem;
     background-color: $pink;
-    margin: 0;
+    margin-bottom: 5px;
     @include border-radius (3px);
   }
 }
